# mini_backtester

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: mini_main.py
src/mini_backtester/: __init__.py  account.py  backtest.py  execution.py  metrics.py  report.py  strategy.py  types.py
tests/: conftest.py  test_engine.py  test_exchange.py  test_metrics.py  test_portfolio.py  test_report.py  test_strategy.py  test_types.py
